--- a/index.html
+++ b/index.html
@@ -78,8 +78,36 @@
       </div>
     </div>
 
-    <div class="clr">
+    <div class="clr"></div>
+
+    <div id="main-block">
+      <h3>Heading</h3>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio consequatur repellendus exercitationem inventore quaerat, eligendi quod rem natus distinctio nihil!
+      </p>
+    </div>
+
+    <div id="sidebar">
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio consequatur repellendus exercitationem inventore quaerat, eligendi quod rem natus distinctio nihil!
+      </p>
+    </div>
+
+    <div class="clr"></div>
+
+    <div class="p-box">
+      <h1>Hello</h1>
+      <h2>Goodbye</h2>
+
+    </div>
+
+    <ul class="my-list">
+      <li>List Item</li>
+      <li>List Item</li>
+      <li>List Item</li>
+      <li>List Item</li>
+    </ul>
     <!-- containter ends here-->
+
+    <a class="fix-me button" href="">Hello</a>
 
     <div style="margin-top: 500px"></div>
   </body>
